--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="HTML,CSS,JavaScript,Jquery,Materialize CSS">
+  <meta name="author" content="Vikrant Rana">
 
 
   <!--Import Google Icon Font-->
@@ -22,6 +24,43 @@
 <body>
   <!--Navbar Start-->
   <nav>
+    <ul id="slide-out" class="sidenav">
+      <li>
+        <div class="user-view">
+          <div class="background">
+            <img src="css/images/background.jpeg">
+          </div>
+          <a href="#user">
+            <img class="circle" src="css/images/User1.jpg">
+          </a>
+          <a href="#name">
+            <span class="white-text name">Vikrant Rana</span>
+          </a>
+          <a href="#email">
+            <span class="white-text email">vikrantrana1993@hotmail.com</span>
+          </a>
+        </div>
+      </li>
+      <li>
+        <a href="#!">
+          HOME</a>
+      </li>
+      <li>
+        <a href="#!">SKILLS</a>
+      </li>
+
+
+      <li>
+        <a class="waves-effect" href="#!">ABOUT US</a>
+      </li>
+
+      <li>
+        <a class="waves-effect" href="#!">CONTACT US</a>
+      </li>
+    </ul>
+    <a href="#" data-target="slide-out" class="sidenav-trigger">
+      <i class="material-icons">menu</i>
+    </a>
     <div class="nav-wrapper">
       <div class="container">
         <a href="#" class="brand-logo">Logo</a>
@@ -34,6 +73,9 @@
           </li>
           <li>
             <a href="#">About Us</a>
+          </li>
+          <li>
+            <a href="#">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -93,9 +135,9 @@
     <h1 class="center-align"> Welcome to the Materialize </h1>
   </div>
   <div class="col s12">
-   
-   
-   
+
+
+
     <div class="row">
       <div class="container">
 
@@ -173,33 +215,49 @@
       <div class="col s12">
         <div class="row">
           <div class="container">
-            <div class="col s6">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-
-
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
 
             <div class="col s6">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+
+            <div class="col s6">
+
+              <img class="materialboxed" width="250" src="css/images/media1.jpeg">
+            </div>
 
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="col s12">
+              <div class="row">
+
+
+
+                <div class="col s6">
+
+                  <img class="materialboxed" width="250" src="css/images/media2.jpeg">
+                </div>
+
+
+                <div class="col s6">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+                </div>
+
+
+              </div>
 
             </div>
+
+
+
+
           </div>
 
         </div>
@@ -234,8 +292,111 @@
   </div>
   <!--PArralax Effect Ends -->
 
+  <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger blue-grey darken-2" href="#modal1">Additional Info</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Information</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex ad exercitationem laboriosam provident suscipit incidunt
+        soluta. Assumenda omnis aspernatur, ex consequuntur praesentium sunt vero repellat. Expedita illo molestiae doloribus?</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
 
 
+  <!---Card with link-->
+  <div class="col s12" id="card-grp">
+    <div class="row">
+      
+      <div class="card col s4">
+        <div class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+            markup to use effectively.</p>
+        </div>
+        <div class="card-tabs">
+          <ul class="tabs tabs-fixed-width">
+            <li class="tab">
+              <a href="#test4">Test 1</a>
+            </li>
+            <li class="tab">
+              <a class="active" href="#test5">Test 2</a>
+            </li>
+            <li class="tab">
+              <a href="#test6">Test 3</a>
+            </li>
+          </ul>
+        </div>
+        <div class="card-content grey lighten-4">
+          <div id="test4">Test 1</div>
+          <div id="test5">Test 2</div>
+          <div id="test6">Test 3</div>
+        </div>
+      </div>
+
+    
+
+
+
+
+      <div class="card col s4">
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+              markup to use effectively.</p>
+          </div>
+          <div class="card-tabs">
+            <ul class="tabs tabs-fixed-width">
+              <li class="tab">
+                <a href="#test4">Test 1</a>
+              </li>
+              <li class="tab">
+                <a class="active" href="#test5">Test 2</a>
+              </li>
+              <li class="tab">
+                <a href="#test6">Test 3</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-content grey lighten-4">
+            <div id="test4">Test 1</div>
+            <div id="test5">Test 2</div>
+            <div id="test6">Test 3</div>
+          </div>
+        </div>
+
+
+
+
+        <div class="card col s4">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+                markup to use effectively.</p>
+            </div>
+            <div class="card-tabs">
+              <ul class="tabs tabs-fixed-width">
+                <li class="tab">
+                  <a href="#test4">Test 1</a>
+                </li>
+                <li class="tab">
+                  <a class="active" href="#test5">Test 2</a>
+                </li>
+                <li class="tab">
+                  <a href="#test6">Test 3</a>
+                </li>
+              </ul>
+            </div>
+            <div class="card-content grey lighten-4">
+              <div id="test4">Test 1</div>
+              <div id="test5">Test 2</div>
+              <div id="test6">Test 3</div>
+            </div>
+          </div>
+    </div>
+  </div>
+  <!---Card with link End-->
 
 
   <!--Footer Start-->
@@ -250,13 +411,17 @@
           <h5 class="white-text">Links</h5>
           <ul>
             <li>
-              <a class="grey-text text-lighten-3" href="#!">Home</a>
+              <i class="material-icons">fingerprint</i>
             </li>
             <li>
-              <a class="grey-text text-lighten-3" href="#!">Skills</a>
+              <i class="material-icons">cloud_queue</i>
             </li>
             <li>
-              <a class="grey-text text-lighten-3" href="#!">About Us</a>
+              <i class="material-icons">leak_remove</i>
+            </li>
+
+            <li>
+              <i class="material-icons">360</i>
             </li>
 
           </ul>
@@ -284,6 +449,9 @@
   <script>
     $(document).ready(function () {
       $('.parallax').parallax();
+      $('.materialboxed').materialbox();
+      $('.sidenav').sidenav();
+      $('.modal').modal();
     });
 
 
@@ -293,9 +461,10 @@
     });
 
     $(document).ready(function () {
-      $('.slider').slider({ full_width: true });
+      $('.slider').slider({
+        full_width: true
+      });
     });
-
   </script>
 </body>
 
